--- a/src/components/_card.sass
+++ b/src/components/_card.sass
@@ -1,6 +1,6 @@
 // Cards
 .card
-  background: #fff
+  background: $white
   border: .1rem solid $core-border-color
   border-radius: $core-radius
   display: block
@@ -26,7 +26,7 @@
 
     .subtitle
       margin: 0
-      color: $grey-lighter
+      color: $grey-light
       font-weight: 700
 
   .card-body
