--- a/src/components/_titles.sass
+++ b/src/components/_titles.sass
@@ -25,7 +25,7 @@
   @each $size in $sizes
     $i: index($sizes, $size)
 
-    &.s-#{$i}
+    &.s--#{$i}
       font-size: $size
 
       code
@@ -50,7 +50,7 @@
   @each $size in $sizes
     $i: index($sizes, $size)
 
-    &.s-#{$i}
+    &.s--#{$i}
       font-size: $size
 
       code
