--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -33,6 +33,7 @@
 @import components/switches
 @import components/table
 @import components/tabs
+@import components/tile
 @import components/titles
 @import components/tooltips
 @import utilities/utility
