--- a/src/utilities/_utility.sass
+++ b/src/utilities/_utility.sass
@@ -42,6 +42,21 @@
 .text-upper
   text-transform: uppercase
 
+.text-ellipsis
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+
+.text--xs
+  font-size: $type-size-tiny
+
+.text--sm
+  font-size: $type-size-small
+
+.text--muted
+  color: $grey-lighter
+
+
 // Visibility
 .hidden-mobile
   +media(mobile)
