--- a/src/components/_menu.sass
+++ b/src/components/_menu.sass
@@ -1,36 +1,44 @@
-.menu-nav
-  a
-    display: block
-    padding: .5rem 1rem
+// Menus
 
-.menu-list
-  a
-    border-radius: $core-radius
-    color: $core-text-color
-    display: block
-    padding: .5rem 1rem
+.menu
+  background: $core-menu-bg
+  margin: 0
+  padding: 1.2rem
+  border: $core-border-width solid $core-border-color
+  border-radius: $core-radius
+  list-style: none
+  z-index: $z-index-10
 
-    &:hover
-      background-color: $grey-lightest
-      color: $core-link-color
+  .menu-item
+    margin: 0
+    padding: 0 .8rem
+    text-decoration: none
+    user-select: none
 
-    // Modifiers
-    &.active
-      background-color: $core-link-color
-      color: adjust-hue($core-link-color, 10%)
+    & > a
+      display: block
+      margin: 0 -.8rem
+      padding: .8rem 1rem
+      color: $grey-400
+      font-size: $type-size-small
+      text-decoration: none
+      border-radius: $core-radius
+      &:focus,
+      &:hover
+        color: $core-link-color
 
-  li
-    ul
-      border-left: .1rem solid $core-radius
-      margin: 1rem
-      padding-left: 1rem
+      &:active,
+      &.active
+        background: transparentize($core-link-color, .9)
+        color: $core-link-color
 
-.menu-label
-  color: $grey-lightest
-  font-size: $type-size-small
-  letter-spacing: .1rem
-  margin-bottom: .5rem
-  text-transform: uppercase
+  .menu-badge
+    float: right
+    padding: .6rem 0
 
-  &:not(:first-child)
-    margin-top: 2rem
+    .btn
+      margin-top: -.2rem
+
+
+  .divider
+    margin-bottom: 2rem
